--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,17 @@
+// {
+//     "presets": [
+//         "@babel/env",
+//         "@babel/react"
+//     ]
+// }
 {
     "presets": [
-        "@babel/env",
-        "@babel/react"
+        "@babel/preset-env",
+        "@babel/preset-react"
+    ],
+    "plugins": [
+        [
+            "@babel/plugin-proposal-class-properties"
+        ]
     ]
 }
